--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ https://templatemo.com/tm-560-astro-motion
                     <img src="img/gallery-img-08.jpg" alt="Image">
                     <figcaption>
                         <div>
-                            <p>Julia dances in the deep dark</p>
+                            <p>Julia dances under the pretty lights</p>
                         </div>
                         <a href="#">View more</a>
                     </figcaption>
